2009-03-25 Richard Dale  <richard.j.dale@gmail.com>
* Added JSignal#createCall and JSignal#createEventCall methods
* Add the headers in Wt/Http

2009-03-23 Richard Dale  <richard.j.dale@gmail.com>
* Don't show boost classes as parents with rbwtapi as they aren't really part
of the public api
* Add marshallers for vectors of WRadioButtons and WGoogleMap::Coordinates
* Change Wt::EventSignal<void> to Wt::EventSignal<> as it no longer compiles
with '<void>' for Wt 2.99.0
* Make dispose() return nil rather than 'self' as it crashes in irb when irb
tries to call inspect() on the return value

2009-03-22 Richard Dale  <richard.j.dale@gmail.com>
* Make rbwtapi skip destructors
* Make lists within templates consistent, and strip spaces round commas
* Add signal type handlers for Wt 2.99.0

2009-03-19 Richard Dale  <richard.j.dale@gmail.com>
* The rbqwtapi tool was calling 'each' on a string which no longer works in 
Ruby 1.9.1 as they aren't Enumerable. So use split instead so that the code
works on both Ruby 1.8.x and 1.9.1. Thanks to Youhei Kondou for the bug
report and fix (for the same code in QtRuby's rbqtapi tool).

2009-03-18 Richard Dale  <richard.j.dale@gmail.com>
* Some signal types are references in Wt 3.0 when they were just values in 
Wt 2.x, so add the new types to the marshallers table

2009-03-15 Richard Dale  <richard.j.dale@gmail.com>
* Added 'rbwtapi' a command line introspection tool for the Wt::Ruby api.
Example usage of rbwtapi:

$ rbwtapi --help
rbwtapi - a Wt::Ruby introspection tool

usage: rbwtapi [-h] [-v] [-p] [-m <re> [-i]] [-r <extension> ...] [<class>]

options:
    -m <re> : find all functions matching regular expression/keyword <re>
    -i : together with -m, performs a case insensitive search
    -p : also display inherited methods for <class>
    -s | show method names with ruby types
    -r : require a Wt::Ruby extension
    -v : print Wt::Ruby and Wt versions
    -h : print this help message

$ rbwtapi -m objectName Wt::WObject