@@ -1437,8 +1437,11 @@ WTRUBY_EXPORT TypeHandler Wt_handlers[] = {
     { "Wt::JSignal<>", marshall_JSignal },
     { "Wt::JSignal<>&", marshall_JSignal },
     { "Wt::JSignal<bool>", marshall_JSignalBoolean },
+    { "Wt::JSignal<bool>&", marshall_JSignalBoolean },
     { "Wt::JSignal<int,int>", marshall_JSignalIntInt },
+    { "Wt::JSignal<int,int>&", marshall_JSignalIntInt },
     { "Wt::JSignal<int>", marshall_JSignalInt },
+    { "Wt::JSignal<int>&", marshall_JSignalInt },
 #if WT_VERSION >= 0x02990000
     { "Wt::JSignal<Wt::WGoogleMap::Coordinate>", marshall_JSignalWGoogleMapCoordinate },
     { "Wt::JSignal<Wt::WGoogleMap::Coordinate>&", marshall_JSignalWGoogleMapCoordinate },
@@ -1454,12 +1457,14 @@ WTRUBY_EXPORT TypeHandler Wt_handlers[] = {
     { "Wt::Signal<int>", marshall_SignalInt },
     { "Wt::Signal<int>&", marshall_SignalInt },
     { "Wt::Signal<long long,long long>",  marshall_SignalLonglongLonglong },
+    { "Wt::Signal<long long,long long>&",  marshall_SignalLonglongLonglong },
     { "Wt::Signal<int64_t,int64_t>&",  marshall_SignalLonglongLonglong },
     { "Wt::Signal<>",  marshall_Signal },
     { "Wt::Signal<>&",  marshall_Signal },
     { "Wt::Signal<std::string>",  marshall_SignalString },
     { "Wt::Signal<std::string>&",  marshall_SignalString },
     { "Wt::Signal<std::string,std::string>",  marshall_SignalStringString },
+    { "Wt::Signal<std::string,std::string>&",  marshall_SignalStringString },
     { "Wt::Signal<void>",  marshall_Signal },
     { "Wt::Signal<void>&",  marshall_Signal },
     { "Wt::Signal<Wt::Ext::Dialog::DialogCode>", marshall_SignalEnum },
@@ -1543,6 +1548,8 @@ WTRUBY_EXPORT TypeHandler Wt_handlers[] = {
     { "std::vector<Wt::WWidget*>&", marshall_WWidgetVector },
     { "std::vector<char>", marshall_StdCharVector },
     { "std::vector<char>&", marshall_StdCharVector },
+    { "std::vector<unsigned char>", marshall_StdCharVector },
+    { "std::vector<unsigned char>&", marshall_StdCharVector },
     { "std::vector<std::string>", marshall_StdStringVector },
     { "std::vector<std::string>&", marshall_StdStringVector },
     { "std::wstring", marshall_StdWString },
